# garbage_quick_sort

./: .gitignore  .gitmodules  README.md
.github/: CODEOWNERS
arduino_script/: arduino_script.ino
dynamixel-workbench/dynamixel_workbench_controllers/config/: basic.yaml  gqs_joints.yaml
dynamixel-workbench/dynamixel_workbench_controllers/launch/: dynamixel_controllers.launch  gqs_dynamixel_controllers.launch
dynamixel-workbench/dynamixel_workbench_operators/config/: motion.yaml
garbage_quick_sort_arduino/: CMakeLists.txt  package.xml
garbage_quick_sort_arduino/include/garbage_quick_sort_arduino/: target_distance.h  target_distanceRequest.h  target_distanceResponse.h
garbage_quick_sort_arduino/scripts/: arduino_service_handler.py
garbage_quick_sort_arduino/scripts/arduino_script/: arduino_script.ino
garbage_quick_sort_arduino/srv/: target_distance.srv
garbage_quick_sort_robot/: CMakeLists.txt  package.xml
garbage_quick_sort_robot/launch/: display.launch  gazebo.launch  gqs.rviz  gqs_robot_bring_up.launch
garbage_quick_sort_robot/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL
garbage_quick_sort_robot/urdf/: garbage_quick_sort_robot.csv  garbage_quick_sort_robot.urdf
garbage_quick_sort_robot_arduino/: CMakeLists.txt  To Do  package.xml  run_arduino.sh  setup.py
garbage_quick_sort_robot_arduino/scripts/: arduino_handler.py  arduino_script.ino  gqsMainArduinoHandler
garbage_quick_sort_robot_arduino/scripts/arduino_script/: arduino_script.ino
garbage_quick_sort_robot_arduino/src/garbage_quick_sort_robot_arduino/: arduino_handler.py
garbage_quick_sort_robot_ik/: CMakeLists.txt  package.xml  setup.py
garbage_quick_sort_robot_ik/src/garbage_quick_sort_robot_ik/: gqsIK.py
garbage_quick_sort_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
garbage_quick_sort_robot_moveit_config/config/: fake_controllers.yaml  garbage_quick_sort_robot.srdf  gazebo_garbage_quick_sort_robot.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
garbage_quick_sort_robot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  gqs.rviz  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
garbage_quick_sort_robot_msg/: CMakeLists.txt  package.xml
garbage_quick_sort_robot_msg/msg/: EffectorPose.msg  JointGoal.msg
garbage_quick_sort_robot_msg/srv/: EffectorPoseFbk.srv  RobotStateFbk.srv  UltrasonicMeanFbk.srv  zFbk.srv
garbage_quick_sort_robot_ros/: CMakeLists.txt  package.xml  setup.py
garbage_quick_sort_robot_ros/scripts/: end_effector_pose.py  gqsMainCustomTraj  gqsMainMoveIt  gqsMainRoboticsToolbox
garbage_quick_sort_robot_ros/src/garbage_quick_sort_robot_ros/: gqsROSCustomTraj.py  gqsROSMoveIt.py  gqsROSRoboticsToolbox.py
garbage_quick_sort_robot_state_machine/: CMakeLists.txt  package.xml  setup.py
garbage_quick_sort_robot_state_machine/scripts/: gqsMainStateMachine
garbage_quick_sort_robot_state_machine/src/garbage_quick_sort_robot_state_machine/: gqsStateMachine.py
moveit/moveit_commander/src/moveit_commander/: move_group.py
panda_panda_arm_hand_ikfast_plugin/: CMakeLists.txt  package.xml  panda_panda_arm_hand_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
panda_panda_arm_hand_ikfast_plugin/src/: panda_panda_arm_hand_ikfast_moveit_plugin.cpp  panda_panda_arm_hand_ikfast_solver.cpp
perception/detection_msgs/: CMakeLists.txt  package.xml
perception/detection_msgs/msg/: TargetCenter.msg  TargetsInfo.msg  TargetsInfoPerFrame.msg
perception/detection_msgs/srv/: FramesInfo.srv  yolo.srv
perception/detector/: CMakeLists.txt  README.md  package.xml  setup.py
perception/detector/launch/: detect.launch
perception/detector/msg/: BoundingBox.msg
perception/detector/scripts/: client.py  detect.py  detect_service.py  gqsMainDetect  motion_test.py  pub_image  pub_image.py
perception/detector/scripts/backup/: backup.py
perception/detector/src/detector/: detect.py
perception/detector/src/yolov5/models/: common.py
perception/detector/srv/: yolo.srv
pr2_common_actions/joint_trajectory_generator/: CMakeLists.txt
pr2_common_actions/joint_trajectory_generator/src/: gqsTrajSmooth.cpp
