<package format="2">
  <name>garbage_quick_sort_robot</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for garbage_quick_sort_robot</p>
    <p>This package contains configuration data, 3D models and launch files
for garbage_quick_sort_robot robot</p>
  </description>
  <author>Zhao Yuxuan</author>
  <maintainer email="zhao0306@e.ntu.edu.sg" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>