<?xml version="1.0"?>
<package format="2">
  <name>garbage_quick_sort_robot_arduino</name>
  <version>0.0.0</version>
  <description>The garbage_quick_sort_arduino package</description>

  <maintainer email="skew002@todo.todo">skew002</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>garbage_quick_sort_robot_msg</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>garbage_quick_sort_robot_msg</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
