<package format="2">
  <name>garbage_quick_sort_robot_msg</name>
  <version>1.0.0</version>
  <description>
    <p>Message package for garbage_quick_sort_robot</p>
    <p>This package contains message types for garbage_quick_sort_robot robot</p>
  </description>
  <author>Venkat</author>
  <maintainer email="venk0023@e.ntu.edu.sg" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>