<package format="2">
  <name>garbage_quick_sort_robot_ros</name>
  <version>1.0.0</version>
  <description>
    <p>ROS Dynamixel and MoveIt! interface package for garbage_quick_sort_robot</p>
    <p>This package contains ROS communication loop for garbage_quick_sort_robot and dynamixel motor to move the robot to a commanded state</p>
  </description>
  <author>Venkat</author>
  <maintainer email="venk0023@e.ntu.edu.sg" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>garbage_quick_sort_robot_msg</depend>
  <depend>garbage_quick_sort_robot_ik</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <export>
    <architecture_independent />
  </export>
</package>