<package format="2">
  <name>garbage_quick_sort_robot_state_machine</name>
  <version>1.0.0</version>
  <description>
    <p>This package contains the State Machine implementation for the Garbage Quick Sort Robot</p>
  </description>
  <author>Venkat</author>
  <maintainer email="venk0023@e.ntu.edu.sg" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>garbage_quick_sort_robot_msg</depend>
  <export>
    <architecture_independent />
  </export>
</package>